# explorations

anon-aadhaar/: package.json
anon-aadhaar/src/pages/: index.tsx
galxe-identity/: package.json  relayer.js  zkVerifyJS.js
mopro-proof-of-geolocation/artifacts/: geolocation-vkey.json  geolocation.circom  geolocation.wasm  geolocation.zkey
mopro-proof-of-geolocation/proof-of-geolocation/: Cargo.toml  Config.toml
mopro-proof-of-geolocation/proof-of-geolocation-app/MoproiOSBindings/MoproBindings.xcframework/ios-arm64-simulator/Headers/: moproFFI.h
mopro-proof-of-geolocation/proof-of-geolocation-app/proof-of-geolocation-app/: ContentView.swift  Info.plist  proof_of_geolocation_appApp.swift
mopro-proof-of-geolocation/proof-of-geolocation-app/proof-of-geolocation-app.xcodeproj/: project.pbxproj
mopro-proof-of-geolocation/proof-of-geolocation-app/proof-of-geolocation-appTests/: proof_of_geolocation_appTests.swift
mopro-proof-of-geolocation/proof-of-geolocation-app/proof-of-geolocation-appUITests/: proof_of_geolocation_appUITests.swift  proof_of_geolocation_appUITestsLaunchTests.swift
mopro-proof-of-geolocation/proof-of-geolocation/MoproiOSBindings/: mopro.swift
mopro-proof-of-geolocation/proof-of-geolocation/MoproiOSBindings/MoproBindings.xcframework/: Info.plist
mopro-proof-of-geolocation/proof-of-geolocation/src/: lib.rs
tee-r0-verifier/: .env.example  Cargo.toml
tee-r0-verifier/src/: main.rs  utils.rs
zkEmail/: .env.example  package.json  relayer.js  zkVerifyJS.js
(+2 files in other folders)
